src/objects/Receive_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorization_Header_Key__c</fullName>
        <label>Authorization Header Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_Extension__c</fullName>
        <label>Endpoint Extension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Can_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Can Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Can_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Can Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Can_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Can Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Can_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Can Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Easy Rest Receive Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Easy Rest Receive Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Easy Rest Receive Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>